# dpi-probe

./: .gitignore  README.md  dpi-probe.1  pyproject.toml
.github/workflows/: ci.yml
completions/: _dpi-probe  dpi-probe.bash  dpi-probe.fish
dpiprobe/: __init__.py  __main__.py  classify.py  cli.py  inject.py  probe.py  report.py
packaging/aur/: .SRCINFO  PKGBUILD  README.md
tests/: test_classify.py  test_inject.py
