[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dpi-probe"
version = "1.1.0"
description = "Detect DPI interference and RST injection from your vantage point"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "charlz-ferra" }]
keywords = ["dpi", "censorship", "reality", "vless", "rst-injection", "opsec", "networking"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: System :: Networking",
]
dependencies = []

[project.optional-dependencies]
deep = ["scapy>=2.5"]
dev = ["pytest>=7", "ruff>=0.5"]

[project.scripts]
dpi-probe = "dpiprobe.cli:main"

[project.urls]
Homepage = "https://github.com/charlz-ferra/dpi-probe"
Issues = "https://github.com/charlz-ferra/dpi-probe/issues"

[tool.hatch.build.targets.wheel]
packages = ["dpiprobe"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
